@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-23T01:10:50Z",
+  "timestamp" : "2022-05-23T08:19:47Z",
   "count_outdated" : 286,
   "uniques_outdated" : 157,
-  "count" : 324,
+  "count" : 323,
   "uniques" : 181,
   "clones" : [
     {
       "timestamp": "2022-05-09T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 1,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
