@@ -1,10 +1,10 @@
 {
-  "count": 38,
+  "count": 37,
   "uniques": 11,
   "clones": [
     {
       "timestamp": "2022-05-09T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
